<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/firstnameEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/settings_character_firstname"
        android:imeOptions="actionDone"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/lastnameEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/settings_character_lastname"
        android:imeOptions="actionDone"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firstnameEdit" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:text="@string/settings_offline_mode"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/settingsSwitch"
        app:layout_constraintStart_toStartOf="@id/lastnameEdit"
        app:layout_constraintTop_toTopOf="@id/settingsSwitch" />

    <Switch
        android:id="@+id/settingsSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lastnameEdit" />

</androidx.constraintlayout.widget.ConstraintLayout>